# RegiBot

./: LICENSE  README.md  config.py  database.py  databaseCsv.py  eventCog.py  hacks.csv  helpCog.py  main.py  main2.py  pyproject.toml  requirements  requirements.txt  scratch.py  setup.md
cogs/: config.py  configbot.py  database.py  databasemongo.py  databasetocsv.py  eventCog.py  helpCog.py  tempCodeRunnerFile.py
database/: config.py  database.py
