[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.3"
discord = "^1.0.1"
praw = "^7.2.0"
dnspython = "^2.1.0"
config = "^0.5.0"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
